--- a/app/assets/javascripts/angular/dashboard/_index.html
+++ b/app/assets/javascripts/angular/dashboard/_index.html
@@ -10,7 +10,15 @@
   </div>
   <div class="row">
     <div class="col-sm-4">
+      <div class="panel panel-default">
+        <div class="panel-heading">Total calories today</div>
+        <div class="panel-body">TODO</div>
+      </div>
 
+      <div class="panel panel-default">
+        <div class="panel-heading">Filters</div>
+        <div class="panel-body">TODO</div>
+      </div>
     </div>
     <div class="col-sm-8">
       <table class="table table-striped">
