--- a/app/assets/javascripts/angular/meals/_meal.html
+++ b/app/assets/javascripts/angular/meals/_meal.html
@@ -39,11 +39,11 @@
       </div>
 
       <div class="form-group">
-        <label class="control-label col-sm-2 required">Calories</label>
+        <label class="control-label col-sm-2 required">When</label>
         <div class="col-sm-4">
           <input
             type="datetime-local"
-            ng-model="meal.eatenAt"
+            ng-model="meal.eaten_at"
             class="form-control"
             required="required"
           />
